Sat Aug 25 20:58:22 2001  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/FILE_IO.i (send_n): Changed to use ACE::write_n to send the
	  chain of Message_Blocks.  The originally used ACE::send_n was
	  causing problem on NT because send_n was restricted for sockets
	  I/O on NT.  Thanks to Doug for pointing this out.

Sat Aug 25 10:16:21 2001  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* tests/Svc_Handler_Test.cpp (main): The destructor of svc_handler
	  will close file_io, so we don't need to do it explicitly!

	* ace/Log_Msg.cpp (log): Changed range check from

	  this->msg_ + ACE_Log_Record::MAXLOGMSGLEN

	  to

	  this->msg_ + sizeof this->msg_

	  to correspond to the change below.

	* ace/Log_Msg.h (ACE_Log_Msg): Increased the size of the buffer
	  used to store log records to account for the NUL-terminator.

	* tests/Svc_Handler_Test.cpp (main): Changed the buffer size
	  and NUL-terminated the buffer so that things print correctly.
  	  Thanks to Nanbor for finding this.

Sat Aug 25 09:00:28 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/TP_Reactor.cpp:
	* ace/TP_Reactor.h (ACE_TP_Reactor): Fixed  a warning in KCC
	  builds.

Sat Aug 25 08:42:57 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/Configuration_Import_Export.cpp: Fixed warnings with g++. I
	  am not sure how this fix will be accepted on different
	  compilers.  Things are always dicy when you want to delete a
	  void *.

Fri Aug 24 23:29:09 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* bin/auto_run_tests.lst: Added File_IO test to our daily builds.

Fri Aug 24 23:12:15 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/WFMO_Reactor.h:
	* ace/WFMO_Reactor.cpp (dispatch_notify): Fixed a compile error on
	  MSVC.

Fri Aug 24 23:07:42 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/Configuration_Import_Export.cpp: Fixed a compile error with
	  g++.

Fri Aug 24 21:55:00 2001  Craig Rodrigues  <crodrigu@bbn.com>
